<resources>
    <string name="app_name">Exercise1</string>
    <string name="bsignin">Sign-in</string>
    <string name="tData">Data Anda</string>
    <string name="label2">Login Berhasil</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="pnama">Nama</string>
    <string name="pemail">Email</string>
    <string name="tpassword">Password</string>
    <string name="trepass">Re - Password</string>
    <string name="judul">Welcome in Todo App</string>
    <string name="regis">Register</string>
    <string name="below">New to Todo App?</string>
    <string name="welcome">Selamat Datang</string>
    <string name="jdtask">Task</string>
    <string name="inama">ini nama</string>
    <string name="isitask">Masukan Task</string>
    <string name="jenistask">Jenis Task</string>
    <string name="isijt">Masukan Jenis Task</string>
    <string name="timetask">Time Task</string>
    <string name="isitimetask">Masukan Time Task</string>
    <string name="tampiltask">Tampil Task</string>
    <string name="tampiljentask">Tampil jenis task</string>
    <string name="tampiltimetask">Tampil time task</string>

</resources>