<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#63A6C5">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="119dp"
        android:layout_height="68dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hurufm" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="136dp"
        android:layout_height="29dp"
        android:text="@string/pnama"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <EditText
        android:id="@+id/edRNama"
        android:layout_width="368dp"
        android:layout_height="39dp"
        android:layout_marginBottom="440dp"
        android:background="#8CB3C5"
        android:drawableStart="@drawable/ic_person"
        android:ems="10"
        android:hint="@string/enama"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:text="@string/pemail"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <EditText
        android:id="@+id/edREmail"
        android:layout_width="362dp"
        android:layout_height="36dp"
        android:background="#8CB3C5"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/eemail"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNama"
        app:layout_constraintVertical_bias="0.263" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="117dp"
        android:layout_height="28dp"
        android:text="@string/tpassword"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <EditText
        android:id="@+id/edRPassword"
        android:layout_width="360dp"
        android:layout_height="38dp"
        android:background="#8CB3C5"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableRight="@drawable/ic_eye"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNama"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/tvRepass"
        android:layout_width="169dp"
        android:layout_height="30dp"
        android:text="@string/trepass"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <EditText
        android:id="@+id/edRRepass"
        android:layout_width="362dp"
        android:layout_height="35dp"
        android:background="#8CB3C5"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableRight="@drawable/ic_eye"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNama"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/btRegis"
        android:layout_width="361dp"
        android:layout_height="47dp"
        android:text="@string/regis"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

</androidx.constraintlayout.widget.ConstraintLayout>